--- a/assets/css/offcanvas.css
+++ b/assets/css/offcanvas.css
@@ -73,3 +73,11 @@ body {
 .lh-100 { line-height: 1; }
 .lh-125 { line-height: 1.25; }
 .lh-150 { line-height: 1.5; }
+
+img {
+    width: 100px; // how much you want
+    min-height: 100px;
+    float: left;
+    margin: 10px;
+    object-fit: cover;
+}
